--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25308,7 +25308,7 @@ span[data-style="panel-brown"] {
   display: block;
 }
 .card-moviecard .movie-info {
-  background: #00bcd4;
+  background: white;
   padding: 16px;
 }
 .card-moviecard .movie-info .time {
